Make DashJS and the MSE player comparable

--- a/client/mse.html
+++ b/client/mse.html
@@ -6,8 +6,8 @@
             //const manifestUrl = 'http://kittens.entertainmenttycoon.com/live/angle-0/manifest.mpd';
             //const manifestUrl = 'http://210.3.146.42:8075/live/angle-0/manifest.mpd';
             //const manifestUrl = 'http://kittens.ipv6.design/live/angle-0/manifest.mpd';
-            const manifestUrl = 'http://cats.entertainmenttycoon.com/live/angle-0/manifest.mpd';
-            //const manifestUrl = 'http://210.3.146.42/live/angle-0/manifest.mpd';
+            //const manifestUrl = 'http://cats.entertainmenttycoon.com/live/angle-0/manifest.mpd';
+            const manifestUrl = 'http://210.3.146.42/live/angle-0/manifest.mpd';
 
             /* Twiddles. */
             const segmentPreavailability = 2000; // How long before a segment is due out to send its request.
