--- a/demo-client/public/index.html
+++ b/demo-client/public/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <noscript>You need to enable JavaScript to view this page properly.</noscript>
+        <video id="video"></video>
         <div id="root"></div>
     </body>
 </html>
