[Demo-Client] Add a short description to the index page

--- a/demo-client/public/index.html
+++ b/demo-client/public/index.html
@@ -18,5 +18,10 @@
 
         <video id="video"></video>
         <div id="root"></div>
+
+        <div class="description">
+            This is a demo of <a href="https://spectralcompute.co.uk/" target="_blank">Spectral Compute</a>'s ultra
+            low-latency video streaming product.
+        </div>
     </body>
 </html>
