[Demo-Client] Add controls

--- a/demo-client/public/index.html
+++ b/demo-client/public/index.html
@@ -17,7 +17,7 @@
         <script>time_is_widget.init({UTC_za00:{}});</script>
 
         <video id="video"></video>
-        <div id="root"></div>
+        <div id="controls"></div>
 
         <div class="description">
             This is a demo of <a href="https://spectralcompute.co.uk/" target="_blank">Spectral Compute</a>'s ultra
