--- a/dev-client/index.html
+++ b/dev-client/index.html
@@ -23,6 +23,9 @@
                 width: 240px;
                 height: 135px;
             }
+            div.timeline {
+                width: 100%;
+            }
         </style>
         <link rel="icon" href="data:," />
     </head>
@@ -52,6 +55,9 @@
             </span>
             <button id="stop" hidden>Stop</button>
             <button id="start" hidden>Start</button>
+        </div>
+        <div class="timeline">
+            <canvas id="latency_timeline"></canvas>
         </div>
         <script src="app.js"></script>
     </body>
