[Dev-Client] Add a download rate timeline

--- a/dev-client/index.html
+++ b/dev-client/index.html
@@ -58,6 +58,7 @@
         </div>
         <div class="timeline">
             <canvas id="latency_timeline"></canvas>
+            <canvas id="dlrate_timeline"></canvas>
         </div>
         <script src="app.js"></script>
     </body>
