[Dev-Client] Typo fix

--- a/dev-client/index.html
+++ b/dev-client/index.html
@@ -51,7 +51,7 @@
                 <select id="latency"></select>
                 <button id="mute">Mute</button>
                 <button id="unmute">Unmute</button>
-                <span id="change">No changes so source made yet</span>
+                <span id="change">No changes to source made yet.</span>
             </span>
             <button id="stop" hidden>Stop</button>
             <button id="start" hidden>Start</button>
