--- a/dev-client/index.html
+++ b/dev-client/index.html
@@ -55,6 +55,7 @@
             </span>
             <button id="stop" hidden>Stop</button>
             <button id="start" hidden>Start</button>
+            <span>Info URL:&nbsp;<span id="info_url"></span></span>
         </div>
         <div class="timeline">
             <canvas id="latency_timeline"></canvas>
