Add a fullscreen button

--- a/dev-client/index.html
+++ b/dev-client/index.html
@@ -48,6 +48,7 @@
                 <select id="quality"></select>
                 <button id="mute">Mute</button>
                 <button id="unmute">Unmute</button>
+                <button id="fullscreen">Fullscreen</button>
                 <span id="change">No changes to source made yet.</span>
             </span>
             <button id="stop" hidden>Stop</button>
