--- a/demo-client/public/index.html
+++ b/demo-client/public/index.html
@@ -17,11 +17,7 @@
         <script>time_is_widget.init({UTC_za00:{}});</script>
 
         <video id="video"></video>
-        <div id="controls"></div>
+        <div id="root"></div>
 
-        <div class="description">
-            This is a demo of <a href="https://spectralcompute.co.uk/" target="_blank">Spectral Compute</a>'s ultra
-            low-latency video streaming product.
-        </div>
     </body>
 </html>
