--- a/demo-client/public/index.html
+++ b/demo-client/public/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Spectral Compute Low Latency Video Streamer Demo</title>
+        <meta
+            name="viewport"
+            content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
+        />
+        <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+
+        <title>RISE by Spectral Compute</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to view this page properly.</noscript>
