--- a/dev-client/index.html
+++ b/dev-client/index.html
@@ -10,21 +10,23 @@
             .ui {
                 margin-bottom: 2px;
             }
-            video {
+            div#video {
+                position: relative;
                 border-color: #000000;
                 border-style: solid;
                 border-width: 1px;
-            }
-            video.primary {
                 width: 1600px;
                 height: 900px;
             }
-            video.secondary {
-                width: 240px;
-                height: 135px;
-            }
             div.timeline {
                 width: 100%;
+            }
+            video {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
             }
         </style>
         <link rel="icon" href="data:," />
@@ -38,8 +40,7 @@
         </div>
         <script src="//widget.time.is/t.js"></script>
         <script>time_is_widget.init({UTC_za00:{}});</script>
-        <video id="video" class="primary"></video>
-        <video id="secondaryVideo" class="secondary"></video>
+        <div id="video"></div>
         <div class="ui">
             <span id="innerui" hidden>
                 <label id="angleLabel" for="angle">Angle:</label>
