Add channel selection to the player

--- a/dev-client/index.html
+++ b/dev-client/index.html
@@ -43,8 +43,12 @@
         <div id="video"></div>
         <div class="ui">
             <span id="innerui" hidden>
+                <!--
                 <label id="angleLabel" for="angle">Angle:</label>
                 <select id="angle"></select>
+                -->
+                <label id="channelLabel" for="channel">Channel:</label>
+                <select id="channel"></select>
                 <label id="qualityLabel" for="quality">Quality:</label>
                 <select id="quality"></select>
                 <button id="mute">Mute</button>
