Add the send_user_json channel API
This is an excellent test of the underlying mechanism.

--- a/dev-client/index.html
+++ b/dev-client/index.html
@@ -55,6 +55,7 @@
             <button id="stop" hidden>Stop</button>
             <button id="start" hidden>Start</button>
             <span>Info URL:&nbsp;<span id="info_url"></span></span>
+            <span id="user_object"></span>
         </div>
         <div class="timeline">
             <canvas id="latency_timeline"></canvas>
